--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.18.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-select": "^5.9.0",
+    "react-world-flags": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
